--- a/portfolio.html
+++ b/portfolio.html
@@ -13,201 +13,209 @@
   </head>
   <body>
     <!--Верхняя линия-->
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-color">Web</span> Studio</a
-        >
+    <header class="header-nav">
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo"
+            ><span class="logo-color">Web</span> Studio</a
+          >
 
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <ul class="site-nav list">
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="add-header list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link"
+              ><img src="./img/envelope(hover).svg" alt="конверт" />
+              info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="link"
+              ><img src="./img/phone.svg" alt="телефон" /> +38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-
-      <ul class="add-header list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link"
-            ><img src="./img/envelope(hover).svg" alt="конверт" />
-            info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link"
-            ><img src="./img/phone.svg" alt="телефон" /> +38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!--Навигация по проэктам-->
-      <section class="portfilio">
-        <h1>Портфолио</h1>
-        <ul class="list">
-          <li>
-            <button type="button" class="filter">Все</button>
-          </li>
-          <li><button type="button" class="filter">Веб-сайты</button></li>
-          <li><button type="button" class="filter">Приложения</button></li>
-          <li><button type="button" class="filter">Дизайн</button></li>
-          <li><button type="button" class="filter">Маркетинг</button></li>
-        </ul>
-
-        <div class="projects">
+      <section class="portfolio">
+        <div class="container">
+          <h1 class="is-hidden">Портфолио</h1>
           <ul class="list">
             <li>
-              <div class="projects-link">
-                <a href="#">
-                  <div>
-                    <img
-                      class="projects-img"
-                      src="./images-portfolio/technokrjak.jpg"
-                      width="370"
-                      alt="технокряк веб-сайт"
-                    />
-                    <!-- <p>
+              <button type="button" class="filter">Все</button>
+            </li>
+            <li><button type="button" class="filter">Веб-сайты</button></li>
+            <li><button type="button" class="filter">Приложения</button></li>
+            <li><button type="button" class="filter">Дизайн</button></li>
+            <li><button type="button" class="filter">Маркетинг</button></li>
+          </ul>
+
+          <div class="projects">
+            <ul class="list">
+              <li>
+                <div class="projects-link">
+                  <a href="#">
+                    <div>
+                      <img
+                        class="projects-img"
+                        src="./images-portfolio/technokrjak.jpg"
+                        width="370"
+                        alt="технокряк веб-сайт"
+                      />
+                      <!-- <p>
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p> -->
-                  </div>
-                  <h2 class="projects-title">Технокряк</h2>
-                  <p class="projects-text">Веб-сайт</p>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="projects-link">
-                <a href="#">
-                  <div>
-                    <img
-                      src="./images-portfolio/desing.jpg"
-                      width="370"
-                      alt="Дизайн постера"
-                    />
-                    <!-- <p></p> -->
-                  </div>
-                  <h2 class="projects-title">
-                    Постер New Orlean vs Golden Star
-                  </h2>
-                  <p class="projects-text">Дизайн</p>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="projects-link">
-                <a href="#">
-                  <div>
-                    <img
-                      src="./images-portfolio/seafood.jpg"
-                      width="370"
-                      alt="приложение ресторана Seafood"
-                    />
-                    <!-- <p></p> -->
-                  </div>
-                  <h2 class="projects-title">Ресторан Seafood</h2>
-                  <p class="projects-text">Приложение</p>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="projects-link">
-                <a href="#">
-                  <div>
-                    <img
-                      src="./images-portfolio/prime.jpg"
-                      width="370"
-                      alt="Проект Prime"
-                    />
-                    <!-- <p></p> -->
-                  </div>
-                  <h2 class="projects-title">Проект Prime</h2>
-                  <p class="projects-text">Маркетинг</p>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="projects-link">
-                <a href="#">
-                  <div>
-                    <img
-                      src="./images-portfolio/boxes.jpg"
-                      width="370"
-                      alt="приложение Boxes"
-                    />
-                    <!-- <p></p> -->
-                  </div>
-                  <h2 class="projects-title">Проект Boxes</h2>
-                  <p class="projects-text">Приложение</p>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="projects-link">
-                <a href="#">
-                  <div>
-                    <img
-                      src="./images-portfolio/Inspiration-has-no-Borders.jpg"
-                      width="370"
-                      alt="Веб-сайт Inspiration has no Borders "
-                    />
-                    <!-- <p></p> -->
-                  </div>
-                  <h2 class="projects-title">Inspiration has no Borders</h2>
-                  <p class="projects-text">Веб-сайт</p>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="projects-link">
-                <a href="#">
-                  <div>
-                    <img
-                      src="./images-portfolio/LimitedEdition.jpg"
-                      width="370"
-                      alt="дизайн издания Limited Edition"
-                    />
-                    <!-- <p></p> -->
-                  </div>
-                  <h2 class="projects-title">Издание Limited Edition</h2>
-                  <p class="projects-text">Дизайн</p>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="projects-link">
-                <a href="#">
-                  <div>
-                    <img
-                      src="./images-portfolio/lab.jpg"
-                      width="370"
-                      alt="Проект LAB"
-                    />
-                    <!-- <p></p> -->
-                  </div>
-                  <h2 class="projects-title">Проект LAB</h2>
-                  <p class="projects-text">Маркетинг</p>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="projects-link">
-                <a href="#">
-                  <div>
-                    <img
-                      src="./images-portfolio/GrowingBusiness.jpg"
-                      width="370"
-                      alt="приложение Growing Business "
-                    />
-                    <!-- <p></p> -->
-                  </div>
-                  <h2 class="projects-title">Growing Business</h2>
-                  <p class="projects-text">Приложение</p>
-                </a>
-              </div>
-            </li>
-          </ul>
+                    </div>
+                    <div class="text">
+                      <h2 class="projects-title">Технокряк</h2>
+                      <p class="projects-text">Веб-сайт</p>
+                    </div>
+                  </a>
+                </div>
+              </li>
+              <li>
+                <div class="projects-link">
+                  <a href="#">
+                    <div>
+                      <img
+                        src="./images-portfolio/desing.jpg"
+                        width="370"
+                        alt="Дизайн постера"
+                      />
+                      <!-- <p></p> -->
+                    </div>
+                    <h2 class="projects-title">
+                      Постер New Orlean vs Golden Star
+                    </h2>
+                    <p class="projects-text">Дизайн</p>
+                  </a>
+                </div>
+              </li>
+              <li>
+                <div class="projects-link">
+                  <a href="#">
+                    <div>
+                      <img
+                        src="./images-portfolio/seafood.jpg"
+                        width="370"
+                        alt="приложение ресторана Seafood"
+                      />
+                      <!-- <p></p> -->
+                    </div>
+                    <h2 class="projects-title">Ресторан Seafood</h2>
+                    <p class="projects-text">Приложение</p>
+                  </a>
+                </div>
+              </li>
+              <li>
+                <div class="projects-link">
+                  <a href="#">
+                    <div>
+                      <img
+                        src="./images-portfolio/prime.jpg"
+                        width="370"
+                        alt="Проект Prime"
+                      />
+                      <!-- <p></p> -->
+                    </div>
+                    <h2 class="projects-title">Проект Prime</h2>
+                    <p class="projects-text">Маркетинг</p>
+                  </a>
+                </div>
+              </li>
+              <li>
+                <div class="projects-link">
+                  <a href="#">
+                    <div>
+                      <img
+                        src="./images-portfolio/boxes.jpg"
+                        width="370"
+                        alt="приложение Boxes"
+                      />
+                      <!-- <p></p> -->
+                    </div>
+                    <h2 class="projects-title">Проект Boxes</h2>
+                    <p class="projects-text">Приложение</p>
+                  </a>
+                </div>
+              </li>
+              <li>
+                <div class="projects-link">
+                  <a href="#">
+                    <div>
+                      <img
+                        src="./images-portfolio/Inspiration-has-no-Borders.jpg"
+                        width="370"
+                        alt="Веб-сайт Inspiration has no Borders "
+                      />
+                      <!-- <p></p> -->
+                    </div>
+                    <h2 class="projects-title">Inspiration has no Borders</h2>
+                    <p class="projects-text">Веб-сайт</p>
+                  </a>
+                </div>
+              </li>
+              <li>
+                <div class="projects-link">
+                  <a href="#">
+                    <div>
+                      <img
+                        src="./images-portfolio/LimitedEdition.jpg"
+                        width="370"
+                        alt="дизайн издания Limited Edition"
+                      />
+                      <!-- <p></p> -->
+                    </div>
+                    <h2 class="projects-title">Издание Limited Edition</h2>
+                    <p class="projects-text">Дизайн</p>
+                  </a>
+                </div>
+              </li>
+              <li>
+                <div class="projects-link">
+                  <a href="#">
+                    <div>
+                      <img
+                        src="./images-portfolio/lab.jpg"
+                        width="370"
+                        alt="Проект LAB"
+                      />
+                      <!-- <p></p> -->
+                    </div>
+                    <h2 class="projects-title">Проект LAB</h2>
+                    <p class="projects-text">Маркетинг</p>
+                  </a>
+                </div>
+              </li>
+              <li>
+                <div class="projects-link">
+                  <a href="#">
+                    <div>
+                      <img
+                        src="./images-portfolio/GrowingBusiness.jpg"
+                        width="370"
+                        alt="приложение Growing Business "
+                      />
+                      <!-- <p></p> -->
+                    </div>
+                    <h2 class="projects-title">Growing Business</h2>
+                    <p class="projects-text">Приложение</p>
+                  </a>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
