--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <!--Верхняя линия-->
     <header class="header-nav">
       <div class="container main-nav">
-        <a href="./index.html" class="logo"
+        
+        <nav class="site-nav-logo">
+          <a class="logo" href="./index.html" 
           ><span class="logo-color">Web</span> Studio</a
         >
-        <nav>
           <ul class="site-nav list">
             <li class="item"><a href="" class="link current">Студия</a></li>
             <li class="item">
@@ -101,16 +102,31 @@
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work list">
-            <li>
-              <img src="./img/desktop.jpg" alt="ноутбук" width="370" />
+            <li class="item">
+              <img
+                class="picture"
+                src="./img/desktop.jpg"
+                alt="ноутбук"
+                width="370"
+              />
               <h3 class="title">Десктопные приложения</h3>
             </li>
-            <li>
-              <img src="./img/mob.jpg" alt="смартфон" width="370" />
+            <li class="item">
+              <img
+                class="picture"
+                src="./img/mob.jpg"
+                alt="смартфон"
+                width="370"
+              />
               <h3 class="title">Мобильные приложения</h3>
             </li>
-            <li>
-              <img src="./img/dis.jpg" alt="дисплей" width="370" />
+            <li class="item">
+              <img
+                class="picture"
+                src="./img/dis.jpg"
+                alt="дисплей"
+                width="370"
+              />
               <h3 class="title">Дизайнерские решения</h3>
             </li>
           </ul>
@@ -123,110 +139,133 @@
           <ul class="list">
             <li class="social-icons">
               <img
+                class="picture"
                 src="./img/nikolay.jpg"
                 alt="Николай Кучеренко"
+                widt
+              />
+             <div class="wrapper">
+                <h3 class="title">Николай Кучеренко</h3>
+              <p class="text">Product Designer</p>
+              <ul class="list-link list">
+                <li class="list-item">
+                  <a href="" aria-label="Ссылка на Instagram" class="link"
+                    >in</a
+                  >
+                </li>
+                <li class="list-item">
+                  <a href="" aria-label="Ссылка на Twitter" class="link"
+                    >tw</a
+                  >
+                </li>
+                <li class="list-item">
+                  <a href="" aria-label="Ссылка на Facebook" class="link"
+                    >fac</a
+                  >
+                </li>
+                <l class="list-item"i>
+                  <a href="" aria-label="Ссылка на Linkedin" class="link"
+                    >lin</a
+                  >
+                </li>
+              </ul>
+            </div>
+            </li>
+            <li class="social-icons">
+              <img
+                class="picture"
+                src="./img/olga.jpg"
+                alt="Ольга Иванова"
                 width="270"
               />
-              <h3 class="title">Николай Кучеренко</h3>
-              <p class="text">Product Designer</p>
-              <ul class="list">
-                <li>
-                  <a href="" aria-label="Ссылка на Instagram" class="link"
-                    >instagram</a
-                  >
-                </li>
-                <li>
-                  <a href="" aria-label="Ссылка на Twitter" class="link"
-                    >twitter</a
-                  >
-                </li>
-                <li>
-                  <a href="" aria-label="Ссылка на Facebook" class="link"
-                    >facebook</a
-                  >
-                </li>
-                <li>
-                  <a href="" aria-label="Ссылка на Linkedin" class="link"
-                    >linkedin</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="social-icons">
-              <img src="./img/olga.jpg" alt="Ольга Иванова" width="270" />
+              <div class="wrapper">
               <h3 class="title">Ольга Иванова</h3>
               <p class="text">Frontend Developer</p>
-              <ul class="list">
-                <li>
+              <ul class="list-link list">
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Instagram" class="link"
                     >instagram</a
                   >
                 </li>
-                <li>
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Twitter" class="link"
                     >twitter</a
                   >
                 </li>
-                <li>
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Facebook" class="link"
                     >facebook</a
                   >
                 </li>
-                <li>
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Linkedin" class="link"
                     >linkedin</a
                   >
                 </li>
               </ul>
+              </div>
             </li>
             <li class="social-icons">
-              <img src="./img/andrey.jpg" alt="Андрей Шевченко" width="270" />
+              <img
+                class="picture"
+                src="./img/andrey.jpg"
+                alt="Андрей Шевченко"
+                width="270"
+              />
+              <div class="wrapper">
               <h3 class="title">Андрей Шевченко</h3>
               <p class="text">Marketing</p>
-              <ul class="list">
-                <li>
+              <ul class="list-link list">
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Instagram" class="link"
                     >instagram</a
                   >
                 </li>
-                <li>
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Twitter" class="link"
                     >twitter</a
                   >
                 </li>
-                <li>
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Facebook" class="link"
                     >facebook</a
                   >
                 </li>
-                <li>
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Linkedin" class="link"
                     >linkedin</a
                   >
                 </li>
               </ul>
+              </div>
             </li>
             <li class="social-icons">
-              <img src="./img/ivan.jpg" alt="Иван Николаев" width="270" />
+              <img
+                class="picture"
+                src="./img/ivan.jpg"
+                alt="Иван Николаев"
+                width="270"
+              />
+              <div class="wrapper">
               <h3 class="title">Иван Николаев</h3>
               <p class="text">UI Designer</p>
-              <ul class="list">
-                <li>
+              <ul class="list-link list">
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Instagram" class="link"
                     >instagram</a
                   >
                 </li>
-                <li>
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Twitter" class="link"
                     >twitter</a
                   >
                 </li>
-                <li>
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Facebook" class="link"
                     >facebook</a
                   >
                 </li>
-                <li>
+                <li class="list-item">
                   <a href="" aria-label="Ссылка на Linkedin" class="link"
                     >linkedin</a
                   >
@@ -252,6 +291,7 @@
                 /></a>
               </li> -->
               </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -261,12 +301,12 @@
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="list">
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./img/logo-1.svg" alt="ya&co" class="link" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./img/logo-2.svg"
@@ -275,12 +315,12 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./img/logo-3.svg" alt="company" class="link" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./img/logo-4-grey.svg"
@@ -289,12 +329,12 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./img/logo-5.svg" alt="brand" class="link" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./img/logo-6.svg"
@@ -309,43 +349,37 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <div class="container">
+      <div class="container main-footer">
         <!--Адрес-->
-        <div>
+        <div class="foot-address item">
           <a href="./index.html" class="logo"
             ><span class="logo-color">Web</span> Studio</a
           >
           <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@example.com"> info@example.com</a><br />
-            <a href="tel:+380991111111"> +38 099 111 11 11</a>
+            <a class="link" href="mailto:info@example.com"> info@example.com</a><br />
+            <a class="link" href="tel:+380991111111"> +38 099 111 11 11</a>
           </address>
         </div>
         <!--Соцсети-->
-        <div class="social">
+        <div class="social item">
           <p class="social-text">присоединяйтесь</p>
-          <ul class="list">
-            <li>
-              <a href="" aria-label="Ссылка на Instagram" class="link"
-                >instagram</a
-              >
+          <ul class="list footer-link">
+            <li class="item-list">
+              <a class="link" href="" aria-label="Ссылка на Instagram">ins</a>
             </li>
-            <li>
-              <a href="" aria-label="Ссылка на Twitter" class="link">twitter</a>
+            <li class="item-list">
+              <a class="link" href="" aria-label="Ссылка на Twitter" >twi</a>
             </li>
-            <li>
-              <a href="" aria-label="Ссылка на Facebook" class="link"
-                >facebook</a
-              >
+            <li class="item-list">
+              <a class="link" href="" aria-label="Ссылка на Facebook" >fac</a>
             </li>
-            <li>
-              <a href="" aria-label="Ссылка на Linkedin" class="link"
-                >linkedin</a
-              >
+            <li class="item-list">
+              <a class="link" href="" aria-label="Ссылка на Linkedin" >lin</a>
             </li>
           </ul>
         </div>
-        <div class="form">
+        <div class="form item">
           <p class="form-text">Подпишитесь на рассылку</p>
           <button class="button sub">Подписаться</button>
         </div>
