--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
   <body>
     <!--Верхняя линия-->
     <header class="header-nav">
-      <div class="container">
-        <nav>
-          <a href="./index.html" class="logo"
+      <div class="container main-nav">
+        <nav class="site-nav-logo">
+          <a class="logo" href="./index.html"
             ><span class="logo-color">Web</span> Studio</a
           >
 
@@ -30,13 +30,13 @@
         </nav>
 
         <ul class="add-header list">
-          <li>
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="link"
               ><img src="./img/envelope(hover).svg" alt="конверт" />
               info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link"
               ><img src="./img/phone.svg" alt="телефон" /> +38 096 111 11 11</a
             >
