--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <!--Верхняя линия-->
     <header class="header-nav">
       <div class="container main-nav">
-        
         <nav class="site-nav-logo">
-          <a class="logo" href="./index.html" 
-          ><span class="logo-color">Web</span> Studio</a
-        >
+          <a class="logo" href="./index.html"
+            ><span class="logo-color">Web</span> Studio</a
+          >
           <ul class="site-nav list">
             <li class="item"><a href="" class="link current">Студия</a></li>
             <li class="item">
@@ -142,34 +141,34 @@
                 class="picture"
                 src="./img/nikolay.jpg"
                 alt="Николай Кучеренко"
-                widt
+                width="270"
               />
-             <div class="wrapper">
+              <div class="wrapper">
                 <h3 class="title">Николай Кучеренко</h3>
-              <p class="text">Product Designer</p>
-              <ul class="list-link list">
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Instagram" class="link"
-                    >in</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Twitter" class="link"
-                    >tw</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Facebook" class="link"
-                    >fac</a
-                  >
-                </li>
-                <l class="list-item"i>
-                  <a href="" aria-label="Ссылка на Linkedin" class="link"
-                    >lin</a
-                  >
-                </li>
-              </ul>
-            </div>
+                <p class="text">Product Designer</p>
+                <ul class="list-link list">
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Instagram" class="link"
+                      >in</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Twitter" class="link"
+                      >tw</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Facebook" class="link"
+                      >fac</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Linkedin" class="link"
+                      >lin</a
+                    >
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="social-icons">
               <img
@@ -179,30 +178,30 @@
                 width="270"
               />
               <div class="wrapper">
-              <h3 class="title">Ольга Иванова</h3>
-              <p class="text">Frontend Developer</p>
-              <ul class="list-link list">
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Instagram" class="link"
-                    >instagram</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Twitter" class="link"
-                    >twitter</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Facebook" class="link"
-                    >facebook</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Linkedin" class="link"
-                    >linkedin</a
-                  >
-                </li>
-              </ul>
+                <h3 class="title">Ольга Иванова</h3>
+                <p class="text">Frontend Developer</p>
+                <ul class="list-link list">
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Instagram" class="link"
+                      >instagram</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Twitter" class="link"
+                      >twitter</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Facebook" class="link"
+                      >facebook</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Linkedin" class="link"
+                      >linkedin</a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="social-icons">
@@ -213,30 +212,30 @@
                 width="270"
               />
               <div class="wrapper">
-              <h3 class="title">Андрей Шевченко</h3>
-              <p class="text">Marketing</p>
-              <ul class="list-link list">
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Instagram" class="link"
-                    >instagram</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Twitter" class="link"
-                    >twitter</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Facebook" class="link"
-                    >facebook</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Linkedin" class="link"
-                    >linkedin</a
-                  >
-                </li>
-              </ul>
+                <h3 class="title">Андрей Шевченко</h3>
+                <p class="text">Marketing</p>
+                <ul class="list-link list">
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Instagram" class="link"
+                      >instagram</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Twitter" class="link"
+                      >twitter</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Facebook" class="link"
+                      >facebook</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Linkedin" class="link"
+                      >linkedin</a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="social-icons">
@@ -247,30 +246,30 @@
                 width="270"
               />
               <div class="wrapper">
-              <h3 class="title">Иван Николаев</h3>
-              <p class="text">UI Designer</p>
-              <ul class="list-link list">
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Instagram" class="link"
-                    >instagram</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Twitter" class="link"
-                    >twitter</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Facebook" class="link"
-                    >facebook</a
-                  >
-                </li>
-                <li class="list-item">
-                  <a href="" aria-label="Ссылка на Linkedin" class="link"
-                    >linkedin</a
-                  >
-                </li>
-                <!-- <li>
+                <h3 class="title">Иван Николаев</h3>
+                <p class="text">UI Designer</p>
+                <ul class="list-link list">
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Instagram" class="link"
+                      >instagram</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Twitter" class="link"
+                      >twitter</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Facebook" class="link"
+                      >facebook</a
+                    >
+                  </li>
+                  <li class="list-item">
+                    <a href="" aria-label="Ссылка на Linkedin" class="link"
+                      >linkedin</a
+                    >
+                  </li>
+                  <!-- <li>
                 <a href="instagram"
                   ><img src="./img/instagram2.svg" alt="instagram"
                 /></a>
@@ -290,7 +289,7 @@
                   ><img src="./img/linkedin1.svg" alt="linkedin"
                 /></a>
               </li> -->
-              </ul>
+                </ul>
               </div>
             </li>
           </ul>
@@ -357,7 +356,8 @@
           >
           <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a class="link" href="mailto:info@example.com"> info@example.com</a><br />
+            <a class="link" href="mailto:info@example.com"> info@example.com</a
+            ><br />
             <a class="link" href="tel:+380991111111"> +38 099 111 11 11</a>
           </address>
         </div>
@@ -369,13 +369,13 @@
               <a class="link" href="" aria-label="Ссылка на Instagram">ins</a>
             </li>
             <li class="item-list">
-              <a class="link" href="" aria-label="Ссылка на Twitter" >twi</a>
+              <a class="link" href="" aria-label="Ссылка на Twitter">twi</a>
             </li>
             <li class="item-list">
-              <a class="link" href="" aria-label="Ссылка на Facebook" >fac</a>
+              <a class="link" href="" aria-label="Ссылка на Facebook">fac</a>
             </li>
             <li class="item-list">
-              <a class="link" href="" aria-label="Ссылка на Linkedin" >lin</a>
+              <a class="link" href="" aria-label="Ссылка на Linkedin">lin</a>
             </li>
           </ul>
         </div>
