--- a/portfolio.html
+++ b/portfolio.html
@@ -49,24 +49,33 @@
       <section class="portfolio">
         <div class="container">
           <h1 class="is-hidden">Портфолио</h1>
-          <ul class="list">
-            <li>
+
+          <ul class="list box-button">
+            <li class="item">
               <button type="button" class="filter">Все</button>
             </li>
-            <li><button type="button" class="filter">Веб-сайты</button></li>
-            <li><button type="button" class="filter">Приложения</button></li>
-            <li><button type="button" class="filter">Дизайн</button></li>
-            <li><button type="button" class="filter">Маркетинг</button></li>
+            <li class="item">
+              <button type="button" class="filter">Веб-сайты</button>
+            </li>
+            <li class="item">
+              <button type="button" class="filter">Приложения</button>
+            </li>
+            <li class="item">
+              <button type="button" class="filter">Дизайн</button>
+            </li>
+            <li class="item">
+              <button type="button" class="filter">Маркетинг</button>
+            </li>
           </ul>
-
+          <!-- сетка -->
           <div class="projects">
-            <ul class="list">
-              <li>
+            <ul class="list grid">
+              <li class="grid-item">
                 <div class="projects-link">
                   <a href="#">
                     <div>
                       <img
-                        class="projects-img"
+                        class="picture projects-img"
                         src="./images-portfolio/technokrjak.jpg"
                         width="370"
                         alt="технокряк веб-сайт"
@@ -84,133 +93,157 @@
                   </a>
                 </div>
               </li>
-              <li>
+              <li class="grid-item">
                 <div class="projects-link">
                   <a href="#">
                     <div>
                       <img
+                        class="picture projects-img"
                         src="./images-portfolio/desing.jpg"
                         width="370"
                         alt="Дизайн постера"
                       />
                       <!-- <p></p> -->
                     </div>
-                    <h2 class="projects-title">
-                      Постер New Orlean vs Golden Star
-                    </h2>
-                    <p class="projects-text">Дизайн</p>
+                    <div class="text">
+                      <h2 class="projects-title">
+                        Постер New Orlean vs Golden Star
+                      </h2>
+                      <p class="projects-text">Дизайн</p>
+                    </div>
                   </a>
                 </div>
               </li>
-              <li>
+              <li class="grid-item">
                 <div class="projects-link">
                   <a href="#">
                     <div>
                       <img
+                        class="picture projects-img"
                         src="./images-portfolio/seafood.jpg"
                         width="370"
                         alt="приложение ресторана Seafood"
                       />
                       <!-- <p></p> -->
                     </div>
-                    <h2 class="projects-title">Ресторан Seafood</h2>
-                    <p class="projects-text">Приложение</p>
+                    <div class="text">
+                      <h2 class="projects-title">Ресторан Seafood</h2>
+                      <p class="projects-text">Приложение</p>
+                    </div>
                   </a>
                 </div>
               </li>
-              <li>
+              <li class="grid-item">
                 <div class="projects-link">
                   <a href="#">
                     <div>
                       <img
+                        class="picture projects-img"
                         src="./images-portfolio/prime.jpg"
                         width="370"
                         alt="Проект Prime"
                       />
                       <!-- <p></p> -->
                     </div>
-                    <h2 class="projects-title">Проект Prime</h2>
-                    <p class="projects-text">Маркетинг</p>
+                    <div class="text">
+                      <h2 class="projects-title">Проект Prime</h2>
+                      <p class="projects-text">Маркетинг</p>
+                    </div>
                   </a>
                 </div>
               </li>
-              <li>
+              <li class="grid-item">
                 <div class="projects-link">
                   <a href="#">
                     <div>
                       <img
+                        class="picture projects-img"
                         src="./images-portfolio/boxes.jpg"
                         width="370"
                         alt="приложение Boxes"
                       />
                       <!-- <p></p> -->
                     </div>
-                    <h2 class="projects-title">Проект Boxes</h2>
-                    <p class="projects-text">Приложение</p>
+                    <div class="text">
+                      <h2 class="projects-title">Проект Boxes</h2>
+                      <p class="projects-text">Приложение</p>
+                    </div>
                   </a>
                 </div>
               </li>
-              <li>
+              <li class="grid-item">
                 <div class="projects-link">
                   <a href="#">
                     <div>
                       <img
+                        class="picture projects-img"
                         src="./images-portfolio/Inspiration-has-no-Borders.jpg"
                         width="370"
                         alt="Веб-сайт Inspiration has no Borders "
                       />
                       <!-- <p></p> -->
                     </div>
-                    <h2 class="projects-title">Inspiration has no Borders</h2>
-                    <p class="projects-text">Веб-сайт</p>
+                    <div class="text">
+                      <h2 class="projects-title">Inspiration has no Borders</h2>
+                      <p class="projects-text">Веб-сайт</p>
+                    </div>
                   </a>
                 </div>
               </li>
-              <li>
+              <li class="grid-item">
                 <div class="projects-link">
                   <a href="#">
                     <div>
                       <img
+                        class="picture projects-img"
                         src="./images-portfolio/LimitedEdition.jpg"
                         width="370"
                         alt="дизайн издания Limited Edition"
                       />
                       <!-- <p></p> -->
                     </div>
-                    <h2 class="projects-title">Издание Limited Edition</h2>
-                    <p class="projects-text">Дизайн</p>
+                    <div class="text">
+                      <h2 class="projects-title">Издание Limited Edition</h2>
+                      <p class="projects-text">Дизайн</p>
+                    </div>
                   </a>
                 </div>
               </li>
-              <li>
+              <li class="grid-item">
                 <div class="projects-link">
                   <a href="#">
                     <div>
                       <img
+                        class="picture projects-img"
                         src="./images-portfolio/lab.jpg"
                         width="370"
                         alt="Проект LAB"
                       />
                       <!-- <p></p> -->
                     </div>
-                    <h2 class="projects-title">Проект LAB</h2>
-                    <p class="projects-text">Маркетинг</p>
+                    <div class="text">
+                      <h2 class="projects-title">Проект LAB</h2>
+                      <p class="projects-text">Маркетинг</p>
+                    </div>
                   </a>
                 </div>
               </li>
-              <li>
+              <li class="grid-item">
                 <div class="projects-link">
                   <a href="#">
                     <div>
                       <img
+                        class="picture projects-img"
                         src="./images-portfolio/GrowingBusiness.jpg"
                         width="370"
                         alt="приложение Growing Business "
                       />
                       <!-- <p></p> -->
                     </div>
-                    <h2 class="projects-title">Growing Business</h2>
-                    <p class="projects-text">Приложение</p>
+                    <div class="text">
+                      <h2 class="projects-title">Growing Business</h2>
+                      <p class="projects-text">Приложение</p>
+                    </div>
                   </a>
                 </div>
               </li>
@@ -222,40 +255,41 @@
 
     <!--Подвал-->
     <footer class="footer">
-      <!--Адрес-->
-      <div>
-        <a href="./index.html" class="logo"
-          ><span class="logo-color">Web</span> Studio</a
-        >
-        <address>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com"> info@example.com</a><br />
-          <a href="tel:+380991111111"> +38 099 111 11 11</a>
-        </address>
-      </div>
-      <!--Соцсети-->
-      <div class="social">
-        <p class="social-text">присоединяйтесь</p>
-        <ul class="list">
-          <li>
-            <a href="" aria-label="Ссылка на Instagram" class="link"
-              >instagram</a
-            >
-          </li>
-          <li>
-            <a href="" aria-label="Ссылка на Twitter" class="link">twitter</a>
-          </li>
-          <li>
-            <a href="" aria-label="Ссылка на Facebook" class="link">facebook</a>
-          </li>
-          <li>
-            <a href="" aria-label="Ссылка на Linkedin" class="link">linkedin</a>
-          </li>
-        </ul>
-      </div>
-      <div class="form">
-        <p class="form-text">Подпишитесь на рассылку</p>
-        <button class="button">Подписаться</button>
+      <div class="container main-footer">
+        <!--Адрес-->
+        <div class="foot-address item">
+          <a href="./index.html" class="logo"
+            ><span class="logo-color">Web</span> Studio</a
+          >
+          <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <a class="link" href="mailto:info@example.com"> info@example.com</a
+            ><br />
+            <a class="link" href="tel:+380991111111"> +38 099 111 11 11</a>
+          </address>
+        </div>
+        <!--Соцсети-->
+        <div class="social item">
+          <p class="social-text">присоединяйтесь</p>
+          <ul class="list footer-link">
+            <li class="item-list">
+              <a class="link" href="" aria-label="Ссылка на Instagram">ins</a>
+            </li>
+            <li class="item-list">
+              <a class="link" href="" aria-label="Ссылка на Twitter">twi</a>
+            </li>
+            <li class="item-list">
+              <a class="link" href="" aria-label="Ссылка на Facebook">fac</a>
+            </li>
+            <li class="item-list">
+              <a class="link" href="" aria-label="Ссылка на Linkedin">lin</a>
+            </li>
+          </ul>
+        </div>
+        <div class="form item">
+          <p class="form-text">Подпишитесь на рассылку</p>
+          <button class="button sub">Подписаться</button>
+        </div>
       </div>
     </footer>
   </body>
